easy upgradation enabled

--- a/widget/device-control-widget.component.html
+++ b/widget/device-control-widget.component.html
@@ -184,7 +184,14 @@
         <div class="card-block">
 
           <div style="text-align: center;">
-            <span (click)="navigateURL(mo.id,mo.type)" [ngClass]="{'pointer':navigateUrlExists(mo.type)}">
+            <span *ngIf="!config.dashboardList">
+              <a *ngIf="widgetHelper.getWidgetConfig().dashboardUrl(mo)"
+              href="{{widgetHelper.getWidgetConfig().dashboardUrl(mo)}}">
+                <img style="height:125px;width:125px;"
+                  [src]="widgetHelper.getWidgetConfig().deviceIcon(mo.name) | SafeImage" alt="Device" title="{{mo.name}}">
+              </a>
+            </span>            
+            <span *ngIf="config.dashboardList" (click)="navigateURL(mo.id,mo.type)" [ngClass]="{'pointer':navigateUrlExists(mo.type,mo.id)}">
               <img style="height:125px;width:125px;"
                 [src]="mo._boxImage" alt="Device" title="{{mo.name}}">
             </span>
