--- a/widget/device-control-widget.component.css
+++ b/widget/device-control-widget.component.css
@@ -38,9 +38,6 @@
     border-bottom-color: var(--table-border, var(--component-border, var(--root-component-border, rgba(0, 0, 0, 0.1))));
 }
 
-.btn-group {
-    padding-bottom: 45px;
-}
 
 .small-icon {
     width: 5em;
@@ -264,3 +261,6 @@ img.withhover:hover {
     cursor: pointer;
 }
 
+:host ::ng-deep .page-link{
+    height:  32px;
+  }
