cleared console, image bug fixed, pageSize for earlier configured wiget

--- a/widget/device-control-widget.component.css
+++ b/widget/device-control-widget.component.css
@@ -264,3 +264,13 @@ img.withhover:hover {
 :host ::ng-deep .page-link{
     height:  32px;
   }
+
+.device-img-span{
+    display: block;
+    height: 125px;
+}
+
+.device-img{
+    max-width: 100%;
+    max-height: 100%;
+}
